# Practice

./: .gitignore  20190108Utilities.cs  201903数据结构平时作业第3题.cpp  20190802temp.cs  CGI_TEST.cpp  CONST_LAUNDER_TEST.cpp  DC_Exception 测试.cpp  DC_Test.h  FixedLockFreeHashMap.java  FixedLockFreeHashMapTest.java  HTTP KeepAlive 测试.cpp  HTTP 压测.cpp  IOCP服务器回调函数绑定参数示例.cpp  LogStats.cpp  OpenSSL 客户端阻塞demo.cpp  Pool 并发测试.cpp  QueueAllocator 测试.cpp  RDP.cpp  README.md  SAR.cpp  SAR_LAUNDER_TEST.cpp  SAR_LAUNDER_TEST.s  SMTP发邮件.cpp  SpinLock 测试.cpp  WinSock SELECT Server 启动.cpp  Windows GDI+ write exif demo.cpp  align测试.cpp  batch base64.cpp  boost.asio.timer test.cpp  build.sh  http request,response,headers,header,title 测试.cpp  http server demo.cpp  http_header 测试.cpp  http_headers 测试.cpp  itchat demo.py  libexif write demo.cpp  liuzi_vector.h  lockfreeresize.cpp  main.c  sar_test.cpp  (+18 more)
CSSSL/: Client.cs  Server.cs
CardMaker/: CardMaker.cpp
HEIF-Utility-Setup-English/: CheckSystem.Designer.cs  CheckSystem.cs  CheckVS15.Designer.cs  CheckVS15.cs  ChooseTPTempDir.Designer.cs  ChooseTPTempDir.cs  ChooseTPTempDir.resx  ControlBase.cs  Finish.Designer.cs  Finish.cs  Finish.resx  HEIF-Utility-Setup.csproj  HEIF-Utility-Setup.sln  MainWindow.Designer.cs  MainWindow.cs  Program.cs  ShowLinkCopyable.cs  ShowLinkCopyable.designer.cs  TP.Designer.cs  TP.cs  TP.resx  Welcome.resx
customize_mkdb/: CMakeLists.txt  clean  clean_build_copy.sh  libhiredis.dylib  mkdb_Storage.cpp  mkdb_Storage_IWalk.cpp  mkdb_Storage_KeyIterator.cpp  mkdb_Storage_KeyIterator.h  redis_hash.h
hookdemo/: Makefile  (+2 more)
(+74 files in other folders)
